# railguard

./: CHANGELOG.md  Cargo.toml  PENTEST-REPORT.md  README.md
defaults/: CLAUDE.md
src/: lib.rs  main.rs  shell.rs  types.rs  update.rs
src/block/: evasion.rs
src/dashboard/: app.rs  mod.rs  ui.rs
src/fence/: path.rs
src/hook/: handler.rs  post_tool.rs  pre_tool.rs  session.rs
src/install/: hooks.rs
src/policy/: defaults.rs  engine.rs  loader.rs
src/threat/: state.rs
src/trace/: logger.rs
tests/: attack_simulation.rs  threat_detection.rs
